<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_new_game" android:title="@string/action_new_game"
        app:showAsAction="always" android:icon="@drawable/ic_action_new" />
    <!--<item android:id="@+id/action_search" android:title="@string/action_search"-->
        <!--app:showAsAction="always" android:icon="@drawable/ic_action_search" />-->
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_debug" android:title="@string/action_debug"
        android:orderInCategory="0" app:showAsAction="never" />
</menu>
